@@ -15,16 +15,20 @@ class Job {
   protected $callback;
   /** @var array Additional parameters */
   protected $params = array();
+  /** @var bool */
+  protected $skip;
   
   /**
    * @param string $name Name of the job
    * @param \callable $callback The task
    * @param array $params Additional parameters for the job   
+   * @param bool $skip
    */
-  function __construct($name, callable $callback, $params = "") {
+  function __construct($name, callable $callback, $params = "", $skip = false) {
     if(is_string($name)) $this->name = $name;
     $this->callback = $callback;
     if(is_array($params)) $this->params = $params;
+    $this->skip = (bool) $skip;
   }
   
   /**
@@ -36,15 +40,19 @@ class Job {
     $time_start = microtime(true);
     Environment::resetCounter();
     ob_start();
-    Environment::printLine("****Starting job $this->name****");
-    if(isset($this->callback)) {
-      call_user_func_array($this->callback, $this->params);
+    if($this->skip) {
+      Environment::printLine("****Skipping job $this->name****");
+    } else {
+      Environment::printLine("****Starting job $this->name****");
+      if(isset($this->callback)) {
+        call_user_func_array($this->callback, $this->params);
+      }
+      $output = ob_get_contents();
+      ob_clean();
+      Environment::printLine("****Finished job $this->name****");
+      $time_end = microtime(true);
+      Environment::testStats($output, $time_start, $time_end);
     }
-    $output = ob_get_contents();
-    ob_clean();
-    Environment::printLine("****Finished job $this->name****");
-    $time_end = microtime(true);
-    Environment::testStats($output, $time_start, $time_end);
     $output .= ob_get_contents();
     ob_clean();
     ob_end_flush();
